Fix ldots in sidenote

--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -870,7 +870,7 @@ appears after it. The reason for this is that $A$ is a
 of the datatype. The main difference is that a parameter is bound once
 for the whole definition and must occur uniformly in the return types
 of the constructors --- i.e.~the return type of each constructor must
-be of the form $\Vec\ A\ ldots$ --- while each constructor determines
+be of the form $\Vec\ A\ \ldots$ --- while each constructor determines
 the value of the index individually.
 }
 
