Add exercise to define multiplication (necessary for scalar product later on)

--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -398,6 +398,14 @@ definition by evaluating it for several concrete inputs.
 \end{exercise}
 }
 
+
+\marginnote{
+\begin{exercise}
+Define the function $\fun{\_*\_} : \Nat → \Nat → \Nat$ for multiplication
+two natural numbers.
+\end{exercise}
+}
+
 \marginnote{
 \begin{exercise}
 Define the type $\data{Bool}$ with constructors
