Add Jeremy Siek as author of PLFA

--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -2634,7 +2634,7 @@ $\circ$& \texttt{\textbackslash{}o} \\
 \item The Agda standard library.%
   \footnote{\hrefu{https://github.com/agda/agda-stdlib}{github.com/agda/agda-stdlib}}
 
-\item Philip Wadler and Wen Kokke: \emph{Programming Language
+\item Philip Wadler, Wen Kokke, and Jeremy Siek: \emph{Programming Language
   Foundations in Agda}\footnote{\hrefu{https://plfa.github.io/}{plfa.github.io}} (online
   book). This book focuses mainly on using Agda to explain core ideas
   from programming languages research, but it is also generally an
